--- a/app/views/employees/_form.html.haml
+++ b/app/views/employees/_form.html.haml
@@ -19,3 +19,22 @@
 		
 		.form-actions
 			= f.button :submit
+
+		/ an exeample of how to style radio buttons !
+		/ see the accompanying CSS in assets/stylesheets/application.css.scss
+		/
+		/ .row
+		/ 	.col-sm-12
+		/ 		%fieldset
+		/ 			%legend Radio Control Quality
+		/ 			%label{ for: "accessible"}
+		/ 				%input{ type:"radio", value: "accessible", name: "quality", id: "accessible"}
+		/ 					%span accessible
+		/
+		/ 			%label{ for: "pretty"}
+		/ 				%input{ type:"radio", value: "pretty", name: "quality", id: "pretty" }
+		/ 					%span pretty
+		/
+		/ 			%label{ for: "accessible-and-pretty"}
+		/ 				%input{ type:"radio", value: "accessible and pretty", name: "quality", id: "accessible-and-pretty" }
+		/ 					%span accessible and pretty
