--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -7,7 +7,8 @@
 				%span.icon-bar
 				%span.icon-bar
 				%span.icon-bar
-			= show_brand
+			= link_to show_brand, root_url, class: 'navbar-brand'
+
 		.collapse.navbar-collapse
 			%ul.nav.navbar-nav
 				= render 'layouts/navigation_links'
