--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,5 +1,5 @@
 .authform
-	= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: put} do |f|
+	= form_for resource, as: resource_name, url: password_path(resource_name), html: { method: :put} do |f|
 		%h3
 			= t(:change_your_password)
 		= devise_error_messages!
@@ -9,4 +9,5 @@
 			= f.password_field :password, autofocus: true, autocomplete: 'off', class: 'form-control'
 			= f.label :password_confirmation, t(:confirm_new_password)
 			= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
+		.form-group
 		= f.submit t(:change_my_password), class: 'button right'
