--- a/app/views/employees/index.html.haml
+++ b/app/views/employees/index.html.haml
@@ -16,7 +16,7 @@
 					%td.name= link_to employee.name, employee_path(employee)
 					%td= "#{show_last_datetime(employee)}"
 					%td= employee.punch_clock.nil? ? "" : employee.punch_clock.name
-					%td{ id: "employee_id_#{employee.id}", title: "#{ t('employees.navigation.delete_employee') }" }
+					%td.delete{ id: "employee_id_#{employee.id}", title: "#{ t('employees.navigation.delete_employee') }" }
 						%button.btn.btn-fab.btn-fab-mini.btn-raised.btn-sm.btn-delete.btn-material-red-A700
 							%i.mdi-navigation-cancel.delete-button
 
@@ -26,7 +26,7 @@
 
 :coffeescript
 
-	$('button').on 'click', (e) ->
+	$('td.delete').on 'click', (e) ->
 		elem = $(this).closest('td')[0]
 		employee_id = elem.id.replace /.*\_/, ''
 		row = $(elem).closest('tr')
